<resources>
    <string name="app_name">FitnessTracker</string>
    <string name="adauga_activitate_tipul">Denumire</string>
    <string name="adauga_activitate_denumire">Numar Calorii</string>
    <string name="adauga_activitate_calorii">Durata</string>
    <string name="adauga_activitate_intake">Intake</string>
    <string name="adauga_activitate_consume">Consume</string>
    <string name="alimenteleTale">Your food</string>
    <string name="mancare">New Food</string>
    <string name="trimite">Trimite</string>
    <string name="nume">Nume</string>
</resources>
